Joomla! 1.6, including alpha and beta versions.
Our thanks to all those people who've contributed bug reports and
code fixes.

Legend:

* -> Security Fix
# -> Issue Fix
$ -> Language fix or change
+ -> Addition
^ -> Change
- -> Removed
! -> Note


2-Oct-2010 Jean-Marie Simonet
 # [#22306] Module CSS class and id changes  Thanks Angie.

30-Sep-2010 Jean-Marie Simonet
 # [#22582] Menu location lost after pressing "Save & New". Thanks Mathavan
 
29-Sep-2010 Jean-Marie Simonet
 # [#22512] Category didn't load component translations. Thanks Christophe and Marcelo.
 # [#22591] Trashing an item in Featured Articles view redirects to non-Featured Articles view. Thanks Mathavan.

28-Sep-2010 Ron Severdia
 # Fixed misplaced DIV in Atomic
 ^ Updated Atomic preview & thumbnail
 ^ Updated Blueprint plug-ins
 # Fix validation issue in Atomic login override
 
28-Sep-2010 Christophe Demko
 # [#22603] XML well formedness errors in com_messages and com_weblinks (thanks Rouven Weßling)
 # [#22125] We don't have CSS for system "warning" messages - deleting and moving icons

28-Sep-2010 Mark Dexter
 # [#21766] If an unpublished article is linked there are errors instead of a message/model change

28-Sep-2010 Jean-Marie Simonet
 $ Adding missing strings in installation.

27-Sep-2010 Jean-Marie Simonet
 # [#21825] Pagebreak and Article Buttons don't work when using CodeMirror. Thanks Mathavan.
 $ Adding missing strings in front-end
 #  [#22432] Administrator login form not consistent in Chrome. Thanks Bill and Viet.
 
26-Sep-2010 Jean-Marie Simonet
 # [#22596] Implementing language filtering in modals + normalizing filters/columns + fixing Newsfeeds language filtering

25-Sep-2010 Jean-Marie Simonet
 # [#22493] Can not register user fatal error message

24-Sep-2010 Jean-Marie Simonet
 # [#22016] Breadcrumbs missing from single items. Thanks Christophe.
 #$ [#22576] Component Manager Options - needless use of name options in tab headings + Normalizing some strings.