@@ -30,6 +30,7 @@ $ -> Language fix or change
 
 2-Oct-2010 Jean-Marie Simonet
  # [#22306] Module CSS class and id changes  Thanks Angie.
+ # [#22487] Separating weblink from content on 22100. Thanks Elin.
 
 30-Sep-2010 Jean-Marie Simonet
  # [#22582] Menu location lost after pressing "Save & New". Thanks Mathavan
